--- a/stable-diffusion/sagemaker-notebook.ipynb
+++ b/stable-diffusion/sagemaker-notebook.ipynb
@@ -83,9 +83,9 @@
    "source": [
     "At the time of writing, the [AWS Inferentia2 does not support dynamic shapes for inference](https://awsdocs-neuron.readthedocs-hosted.com/en/latest/general/arch/neuron-features/dynamic-shapes.html?highlight=dynamic%20shapes#), which means that the input size needs to be static for compiling and inference. \n",
     "\n",
-    "In simpler terms, this means when the model is converted with a sequence length of 16. The model can only run inference on inputs with the same shape. We are going to use the `optimum-cli` to convert our model with a sequence length of 128 and a batch size of 1. \n",
+    "In simpler terms, this means we need to define the input shapes in advance for our prompt (sequence length), batch size, height and width of the image.\n",
     "\n",
-    "You need to use ~50GB of memory and the compilation can take 10-20 minutes_ "
+    "_Note: You need to use ~50GB of memory and the compilation can take 10-20 minutes_"
    ]
   },
   {
