--- a/stable-diffusion/sagemaker-notebook.ipynb
+++ b/stable-diffusion/sagemaker-notebook.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "%%writefile code/requirements.txt\n",
-    "git+https://github.com/huggingface/optimum-neuron.git@main\n",
+    "optimum-neuron==0.0.9\n",
     "diffusers"
    ]
   },
@@ -188,7 +188,10 @@
     "\n",
     "def model_fn(model_dir):\n",
     "    # load local converted model into pipeline\n",
-    "    pipeline = NeuronStableDiffusionPipeline.from_pretrained(model_dir, device_ids=[0, 1])\n",
+    "    input_shapes = {\"batch_size\": 1,\"sequence_length\":64, \"height\": 512, \"width\": 512}\n",
+    "\n",
+    "    pipeline = NeuronStableDiffusionPipeline.from_pretrained(model_dir, device_ids=[0, 1],**input_shapes)\n",
+    "    \n",
     "    pipeline.scheduler = DPMSolverMultistepScheduler.from_config(pipeline.scheduler.config)\n",
     "    return pipeline\n",
     "\n",
