--- a/llama2-7b/sagemaker-notebook.ipynb
+++ b/llama2-7b/sagemaker-notebook.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "b4246c06",
    "metadata": {},
    "outputs": [],
@@ -179,18 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "44509f57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing llama_neuron/code/requirements.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile {save_directory}/code/requirements.txt\n",
     "\n",
@@ -207,18 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3ce41529",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing llama_neuron/code/inference.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile {save_directory}/code/inference.py\n",
     "import os\n",
@@ -229,11 +213,12 @@
     "import base64\n",
     "from io import BytesIO\n",
     "from optimum.neuron import pipeline\n",
-    "import time\n",
     "\n",
     "def model_fn(model_dir):\n",
     "    # load local converted model and tokenizer\n",
+    "    print(\"loading pipeline...\")\n",
     "    pipe = pipeline(\"text-generation\", model_dir)\n",
+    "    print(\"loading complete\")\n",
     "    return pipe\n",
     "\n",
     "\n",
@@ -271,53 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b8a37dd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "\n",
-    "os.environ[\"AWS_DEFAULT_REGION\"] = \"us-east-2\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "952983b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Couldn't call 'get_role' to get Role ARN from role name philippschmid to get Role path.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n",
-      "sagemaker role arn: arn:aws:iam::558105141721:role/sagemaker_execution_role\n",
-      "sagemaker bucket: sagemaker-us-east-2-558105141721\n",
-      "sagemaker session region: us-east-2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -355,25 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ba6b711c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/huggingface-inferentia2-samples/llama2-7b/llama_neuron\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/huggingface-inferentia2-samples/llama2-7b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a model.tar.gz archive with all the model artifacts and the inference.py script.\n",
     "%cd {save_directory}\n",
@@ -391,26 +318,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6146af09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model artifcats uploaded to s3://sagemaker-us-east-2-558105141721/neuronx/llama/model.tar.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sagemaker.s3 import S3Uploader\n",
     "\n",
@@ -437,35 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "41522ef6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your model is not compiled. Please compile your model before using Inferentia.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------!send warmup request\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from sagemaker.huggingface.model import HuggingFaceModel\n",
@@ -511,37 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "237f198c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user: What is Amazon SageMaker?\n",
-      "assistant: Amazon SageMaker is a fully managed service provided by Amazon Web Services (AWS) that enables developers and data scientists to build, train, and deploy machine learning (ML) models quickly and easily. It provides a range of tools and features to help users work with ML models, including data preparation, model training, model evaluation, and deployment.\n",
-      "\n",
-      "SageMaker allows users to work with a variety of ML frameworks, including TensorFlow, PyTorch, and Scikit-learn, and provides integration with other AWS services such as Amazon S3, Amazon Redshift, and Amazon Elastic Compute Cloud (EC2).\n",
-      "\n",
-      "Some of the key features of Amazon SageMaker include:\n",
-      "\n",
-      "1. Data Wrangling: SageMaker provides tools for data preparation, including data cleaning, feature engineering, and data transformation.\n",
-      "2. Model Training: SageMaker allows users to train ML models using a variety of frameworks and algorithms, including supervised, unsupervised, and reinforcement learning.\n",
-      "3. Model Evaluation: SageMaker provides tools for evaluating the performance of ML models, including metrics such as accuracy, precision, and recall.\n",
-      "4. Model Deployment: SageMaker allows users to deploy ML models to a variety of environments, including AWS services such as Amazon S3 and Amazon EC2, as well as on-premises environments.\n",
-      "5. Automated Machine Learning (AutoML): SageMaker provides automated ML capabilities, including automated model selection, hyperparameter tuning, and model deployment.\n",
-      "6. Collaboration: SageMaker provides tools for collaboration, including version control, team management, and collaboration on ML projects.\n",
-      "7. Monitoring and Debugging: SageMaker provides tools for monitoring and debugging ML models, including logging, metrics, and visualization.\n",
-      "8. Integration with Other AWS Services: SageMaker integrates with other AWS services, such as Amazon S3, Amazon Redshift, and Amazon EC2, to provide a complete ML solution.\n",
-      "\n",
-      "Amazon SageMaker is a powerful tool for building, training, and deploying ML models, and can be used in a variety of applications, including image and speech recognition, natural language processing, recommendation systems, and more.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# OpenAI like conversational messages\n",
     "messages = [\n",
+    "  {\"role\": \"system\", \"content\": \"You are an helpful AWS Expert Assistant. Respond only with 1-2 sentences.\"},\n",
     "  {\"role\": \"user\", \"content\": \"What is Amazon SageMaker?\"},\n",
     "]\n",
     "\n",
@@ -583,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "8c6035b7",
    "metadata": {},
    "outputs": [
@@ -591,60 +454,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "system: You are an helpful AWS Expert Assistant. Respond only with 1-2 sentences.\n",
       "user: What is Amazon SageMaker?\n",
-      "assistant: Amazon SageMaker is a fully managed service provided by Amazon Web Services (AWS) that enables developers and data scientists to build, train, and deploy machine learning (ML) models quickly and easily. It provides a range of tools and features to help users work with ML models, including data preparation, model training, model evaluation, and deployment.\n",
-      "\n",
-      "SageMaker allows users to work with a variety of ML frameworks, including TensorFlow, PyTorch, and Scikit-learn, and provides integration with other AWS services such as Amazon S3, Amazon Redshift, and Amazon Elastic Compute Cloud (EC2).\n",
-      "\n",
-      "Some of the key features of Amazon SageMaker include:\n",
-      "\n",
-      "1. Data Wrangling: SageMaker provides tools for data preparation, including data cleaning, feature engineering, and data transformation.\n",
-      "2. Model Training: SageMaker allows users to train ML models using a variety of frameworks and algorithms, including supervised, unsupervised, and reinforcement learning.\n",
-      "3. Model Evaluation: SageMaker provides tools for evaluating the performance of ML models, including metrics such as accuracy, precision, and recall.\n",
-      "4. Model Deployment: SageMaker allows users to deploy ML models to a variety of environments, including AWS services such as Amazon S3 and Amazon EC2, as well as on-premises environments.\n",
-      "5. Automated Machine Learning (AutoML): SageMaker provides automated ML capabilities, including automated model selection, hyperparameter tuning, and model deployment.\n",
-      "6. Collaboration: SageMaker provides tools for collaboration, including version control, team management, and collaboration on ML projects.\n",
-      "7. Monitoring and Debugging: SageMaker provides tools for monitoring and debugging ML models, including logging, metrics, and visualization.\n",
-      "8. Integration with Other AWS Services: SageMaker integrates with other AWS services, such as Amazon S3, Amazon Redshift, and Amazon EC2, to provide a complete ML solution.\n",
-      "\n",
-      "Amazon SageMaker is a powerful tool for building, training, and deploying ML models, and can be used in a variety of applications, including image and speech recognition, natural language processing, recommendation systems, and more.\n",
+      "assistant: Amazon SageMaker is a fully managed service that provides a range of machine learning (ML) algorithms, tools, and frameworks to build, train, and deploy ML models at scale. It allows data scientists and engineers to focus on building better ML models instead of managing infrastructure.\n",
       "user: Can I run Hugging Face Transformers on it?\n",
-      "assistant: Yes, you can run Hugging Face Transformers on Amazon SageMaker. Hugging Face Transformers is a popular open-source library for natural language processing (NLP) tasks, and it supports a wide range of platforms, including AWS.\n",
-      "\n",
-      "Here are the general steps to run Hugging Face Transformers on Amazon SageMaker:\n",
-      "\n",
-      "1. Install the Hugging Face Transformers library on your AWS instance: You can install the library using pip, the Python package manager. You can do this by running the following command in your terminal:\n",
-      "```\n",
-      "pip install transformers\n",
-      "```\n",
-      "2. Import the library in your Python code: Once you have installed the library, you can import it in your Python code using the following line of code:\n",
-      "```python\n",
-      "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments\n",
-      "```\n",
-      "3. Load your dataset: You can use the `train.csv` file that comes with the Hugging Face Transformers library to load your dataset. Here's an example of how to do this:\n",
-      "```python\n",
-      "tokenizer = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
-      "encoded_data = tokenizer(train.csv, return_tensors='pt')\n",
-      "```\n",
-      "4. Create a training argument: You can create a training argument using the `TrainingArguments` class from the Hugging Face Transformers library. Here's an example of how to do this:\n",
-      "```python\n",
-      "training_args = TrainingArguments(\n",
-      "    output_dir='./results',\n",
-      "    num_train_epochs=3,\n",
-      "    per_device_train_batch_size=16,\n",
-      "    per_device_eval_batch_size=64,\n",
-      "    evaluation_strategy='epoch',\n",
-      "    learning_rate=5e-5,\n",
-      "    save_total_limit=2,\n",
-      "    save_steps=500,\n",
-      "    load_best_model_at_end=True,\n",
-      "    metric_for_best_model='accuracy',\n",
-      "    greater_is_better=True,\n",
-      "    save_strategy='steps',\n",
-      "    save_on_each_node=True,\n",
-      ")\n",
-      "```\n",
-      "5. Train your model: You can train your model using the `train` function from the H\n"
+      "assistant: Yes, you can run Hugging Face Transformers on Amazon SageMaker. Amazon SageMaker provides a pre-built Python SDK that supports popular deep learning frameworks like Hugging Face Transformers, making it easy to use these frameworks in your machine learning workflows.\n"
      ]
     }
    ],
@@ -677,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "d8917d5e",
    "metadata": {},
    "outputs": [],
