--- a/llama2-7b/sagemaker-notebook.ipynb
+++ b/llama2-7b/sagemaker-notebook.ipynb
@@ -16,7 +16,7 @@
     "2. Create a custom `inference.py` script for Llama 2\n",
     "3. Upload the neuron model and inference script to Amazon S3\n",
     "4. Deploy a Real-time Inference Endpoint on Amazon SageMaker\n",
-    "5. Generate images using the deployed model\n",
+    "5. Run inference and chat with Llama 2\n",
     "\n",
     "## Quick intro: AWS Inferentia 2\n",
     "\n",
@@ -388,7 +388,7 @@
    "id": "1c858560",
    "metadata": {},
    "source": [
-    "# 5. Run inference on Llama 2\n",
+    "# 5. Run inference and chat with Llama 2\n",
     "\n",
     "The `.deploy()` returns an `HuggingFacePredictor` object which can be used to request inference. Our endpoint expects a `json` with `messages`. Since we are leveraging the new [apply_chat_template](https://huggingface.co/docs/transformers/main/en/internal/tokenization_utils#transformers.PreTrainedTokenizerBase.apply_chat_template) in our inference.py script we can send \"openai\" like converstaions to our model. \n",
     "\n",
