--- a/llama2-7b/sagemaker-notebook.ipynb
+++ b/llama2-7b/sagemaker-notebook.ipynb
@@ -110,7 +110,7 @@
     "# COMMENT IN BELOW TO COMPILE DIFFERENT MODEL #\n",
     "###############################################\n",
     "#\n",
-    "# from optimum.neuron import NeuronStableDiffusionXLPipeline\n",
+    "# from optimum.neuron import NeuronModelForCausalLM\n",
     "# from transformers import AutoTokenizer\n",
     "# \n",
     "# # model id you want to compile\n",
