--- a/llama2-7b/sagemaker-notebook.ipynb
+++ b/llama2-7b/sagemaker-notebook.ipynb
@@ -138,7 +138,7 @@
    "id": "9997e9db",
    "metadata": {},
    "source": [
-    "## 2. Create a custom `inference.py` script for Stable Diffusion\n",
+    "## 2. Create a custom `inference.py` script for Llama 2 7B\n",
     "\n",
     "The [Hugging Face Inference Toolkit](https://github.com/aws/sagemaker-huggingface-inference-toolkit) supports zero-code deployments on top of the [pipeline feature](https://huggingface.co/transformers/main_classes/pipelines.html) from 🤗 Transformers. This allows users to deploy Hugging Face transformers without an inference script [[Example](https://github.com/huggingface/notebooks/blob/master/sagemaker/11_deploy_model_from_hf_hub/deploy_transformer_model_from_hf_hub.ipynb)]. \n",
     "\n",
