--- a/sentence-transformers-embeddings/sagemaker-notebook.ipynb
+++ b/sentence-transformers-embeddings/sagemaker-notebook.ipynb
@@ -31,7 +31,7 @@
    "id": "e3db68e5",
    "metadata": {},
    "source": [
-    "## 1. Convert BERT to AWS Neuron (Inferentia2) with `optimum-neuron`\n",
+    "## 1. Convert Embeddings Model to AWS Neuron (Inferentia2) with `optimum-neuron`\n",
     "\n",
     "We are going to use the [optimum-neuron](https://huggingface.co/docs/optimum-neuron/index). 🤗 Optimum Neuron is the interface between the 🤗 Transformers library and AWS Accelerators including [AWS Trainium](https://aws.amazon.com/machine-learning/trainium/?nc1=h_ls) and [AWS Inferentia](https://aws.amazon.com/machine-learning/inferentia/?nc1=h_ls). It provides a set of tools enabling easy model loading, training and inference on single- and multi-Accelerator settings for different downstream tasks. \n",
     "\n",
@@ -48,9 +48,9 @@
    "outputs": [],
    "source": [
     "# Install the required packages\n",
-    "!pip install \"optimum-neuron[neuronx]==0.0.14\"  --upgrade\n",
-    "\n",
-    "!python -m pip install \"sagemaker==2.192.0\"  --upgrade"
+    "%pip install \"optimum-neuron[neuronx]==0.0.14\"  --upgrade\n",
+    "%pip install \"sagemaker>=2.197.0\"  --upgrade\n",
+    "# restart your kernel"
    ]
   },
   {
@@ -78,48 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "96d8dfea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "config.json: 100%|██████████| 1.24k/1.24k [00:00<00:00, 387kB/s]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[A\u001b[A\u001b[A\n",
-      "\u001b[A\n",
-      "\n",
-      "special_tokens_map.json: 100%|██████████| 695/695 [00:00<00:00, 42.2kB/s]\n",
-      "README.md: 100%|██████████| 61.6k/61.6k [00:00<00:00, 6.72MB/s]\n",
-      "vocab.txt: 100%|██████████| 232k/232k [00:00<00:00, 15.8MB/s]\n",
-      "tokenizer.json: 100%|██████████| 711k/711k [00:00<00:00, 79.2MB/s]\n",
-      "tokenizer_config.json: 100%|██████████| 1.24k/1.24k [00:00<00:00, 424kB/s]\n",
-      "model.neuron: 100%|██████████| 274M/274M [00:06<00:00, 42.2MB/s]\n",
-      "Fetching 7 files: 100%|██████████| 7/7 [00:06<00:00,  1.05it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/home/ubuntu/huggingface-inferentia2-samples/sentence-transformers-embeddings/embedding_model'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "\n",
@@ -176,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b4246c06",
    "metadata": {},
    "outputs": [],
@@ -194,18 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3ce41529",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing embedding_model/code/inference.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile {save_directory}/code/inference.py\n",
     "import os\n",
@@ -259,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d016feac",
    "metadata": {},
    "outputs": [],
@@ -280,22 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "952983b5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sagemaker'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/ubuntu/huggingface-inferentia2-samples/sentence-transformers-embeddings/sagemaker-notebook.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Binf2/home/ubuntu/huggingface-inferentia2-samples/sentence-transformers-embeddings/sagemaker-notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msagemaker\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Binf2/home/ubuntu/huggingface-inferentia2-samples/sentence-transformers-embeddings/sagemaker-notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mboto3\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Binf2/home/ubuntu/huggingface-inferentia2-samples/sentence-transformers-embeddings/sagemaker-notebook.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m sess \u001b[39m=\u001b[39m sagemaker\u001b[39m.\u001b[39mSession()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sagemaker'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -326,7 +268,7 @@
    "id": "374ff630",
    "metadata": {},
    "source": [
-    "Next, we create our `model.tar.gz`.The `inference.py` script will be placed into a `code/` folder."
+    "Next, we create our `model.tar.gz`. The `inference.py` script will be placed into a `code/` folder."
    ]
   },
   {
@@ -363,7 +305,7 @@
     "s3_model_path = f\"s3://{sess.default_bucket()}/neuronx/embeddings\"\n",
     "\n",
     "# upload model.tar.gz\n",
-    "s3_model_uri = S3Uploader.upload(local_path=\"tmp/model.tar.gz\",desired_s3_uri=s3_model_path)\n",
+    "s3_model_uri = S3Uploader.upload(local_path=f\"{save_directory}/model.tar.gz\",desired_s3_uri=s3_model_path)\n",
     "print(f\"model artifcats uploaded to {s3_model_uri}\")"
    ]
   },
@@ -413,7 +355,7 @@
    "id": "1c858560",
    "metadata": {},
    "source": [
-    "# 5. Run and evaluate Inference performance of BERT on Inferentia\n",
+    "# 5. Run and evaluate Inference performance of Embeddings Model on Inferentia2\n",
     "\n",
     "The `.deploy()` returns an `HuggingFacePredictor` object which can be used to request inference."
    ]
@@ -430,7 +372,11 @@
     "}\n",
     "\n",
     "res = predictor.predict(data=data)\n",
-    "res"
+    "\n",
+    "\n",
+    "# print some results \n",
+    "print(f\"lenght of embeddings: {len(res['embeddings'])}\")\n",
+    "print(f\"first 10 elements of embeddings: {res['embeddings'][:10]}\")"
    ]
   },
   {
@@ -439,9 +385,13 @@
    "id": "0a146346",
    "metadata": {},
    "source": [
-    "We managed to deploy our neuron compiled BERT to AWS Inferentia on Amazon SageMaker. Now, let's test its performance of it. As a dummy load test will we use threading to send 10000 requests to our endpoint with 10 threads.\n",
+    "Awesome we can now generate embeddings with our model, Lets test the performance of our model.\n",
     "\n",
-    "_Note: When running the load test we environment was based in europe and the endpoint is deployed in us-east-2._"
+    "A load test will we send 10,000 requests to our endpoint use threading with 10 concurrent threads. We will measure the average latency and throughput of our endpoint. We are going to sent an input of 300 tokens to have a total of 3 Million tokens, but remember the model is compiled with a `sequence_length` of 384. This means that the model will pad the input to 384 tokens, this increases the latency a bit. \n",
+    "\n",
+    "> We decided to use 300 tokens as input length to find the balance between shorter inputs which are padded and longer inputs, which are truncated. If you know your chunk size, we recommend to compile the model with that length to get maximum performance.\n",
+    "\n",
+    "_Note: When running the load test, the requests are sent from europe and the endpoint is deployed in us-east-2. This adds a network overhead to it._"
    ]
   },
   {
@@ -452,7 +402,7 @@
    "outputs": [],
    "source": [
     "import threading\n",
-    "\n",
+    "import time \n",
     "number_of_threads = 10\n",
     "number_of_requests = int(10000 // number_of_threads)\n",
     "print(f\"number of threads: {number_of_threads}\")\n",
@@ -460,15 +410,17 @@
     "\n",
     "def send_rquests():\n",
     "    for _ in range(number_of_requests):\n",
-    "        predictor.predict(data={\"inputs\": \"it 's a charming and often affecting journey .\"})\n",
-    "    print(\"done\")\n",
+    "        # input counted at https://huggingface.co/spaces/Xenova/the-tokenizer-playground for 100 tokens\n",
+    "        predictor.predict(data={\"inputs\": \"Hugging Face is a company and a popular platform in the field of natural language processing (NLP) and machine learning. They are known for their contributions to the development of state-of-the-art models for various NLP tasks and for providing a platform that facilitates the sharing and usage of pre-trained models. One of the key offerings from Hugging Face is the Transformers library, which is an open-source library for working with a variety of pre-trained transformer models, including those for text generation, translation, summarization, question answering, and more. The library is widely used in the research and development of NLP applications and is supported by a large and active community. Hugging Face also provides a model hub where users can discover, share, and download pre-trained models. Additionally, they offer tools and frameworks to make it easier for developers to integrate and use these models in their own projects. The company has played a significant role in advancing the field of NLP and making cutting-edge models more accessible to the broader community.\"})\n",
     "\n",
     "# Create multiple threads\n",
     "threads = [threading.Thread(target=send_rquests) for _ in range(number_of_threads) ]\n",
     "# start all threads\n",
+    "start = time.time()\n",
     "[t.start() for t in threads]\n",
     "# wait for all threads to finish\n",
-    "[t.join() for t in threads]"
+    "[t.join() for t in threads]\n",
+    "print(f\"total time: {round(time.time() - start)} seconds\")"
    ]
   },
   {
@@ -477,8 +429,8 @@
    "id": "b0b8e25d",
    "metadata": {},
    "source": [
-    "Sending 10000 requests with 10 threads takes around 86 seconds. This means we can run around ~116 inferences per second. But keep in mind that includes the network latency from europe to us-east-2. \n",
-    "When we inspect the latency of the endpoint through cloudwatch we can see that the average latency is around 4ms. This means we can run around 500 inferences per second, without network overhead or framework overhead."
+    "Sending 10,000 requests or generating 3 million tokens took around 101 seconds. This means we can run around ~99 inferences per second. But keep in mind that includes the network latency from europe to us-east-2. \n",
+    "When we inspect the latency of the endpoint through cloudwatch we can see that the average request latency is around 13ms. This means we can serve around 153 inferences per second (having 2 HTTP workers)."
    ]
   },
   {
@@ -492,14 +444,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "af0f26d0",
+   "id": "be140397",
    "metadata": {},
    "source": [
-    "The average latency for our BERT model is `3.8-4.1ms` for a sequence length of 128.  \n",
+    "The average latency for our Embeddings model is `11.1-11.5ms` with a Framework overhead of `2ms` leading to an request latency of ~`13ms`\n",
     "\n",
-    "![performance](./imgs/performance.png)\n"
+    "![latency](./imgs/request-latency.png)\n"
    ]
   },
   {
@@ -522,6 +473,20 @@
    "source": [
     "predictor.delete_model()\n",
     "predictor.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa6604c7",
+   "metadata": {},
+   "source": [
+    "## Conclusion \n",
+    "\n",
+    "In this post, we deployed a top open source Embeddings Model (BGE) on a single `inf2.xlarge` instance costing $0.99/hour on Amazon SageMaker using Optimum Neuron. We are able to run 2 replicas of the model on a single instance with a avg. model latency of 11.1-11.5ms for inputs of 300 tokens with a max sequence length of 384 and a throughput without network overhead of 180 inferences per second.\n",
+    "\n",
+    "This means we can create (300 tokens * 153 requests) 45,900 tokens per second, 2,754,000 tokens per minute and 165,240,000 tokens per hour. This leads to a cost of `~$0.006 1M/tokens` if utilized well. For comparison OpenAI or Amazon Bedrock charges $0.10 per 1M tokens.\n",
+    "\n",
+    "For startups and companies looking into GPU alternative for generating emebddings Inferentia2 is a great option for not only efficient and fast but also cost-effective inference."
    ]
   },
   {
@@ -552,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
