--- a/sentence-transformers-embeddings/sagemaker-notebook.ipynb
+++ b/sentence-transformers-embeddings/sagemaker-notebook.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "    # Compute embeddings\n",
     "    with torch.no_grad():\n",
-    "        model_output = model(*tuple(encoded_input.values()))\n",
+    "        model_output = model(**encoded_input)\n",
     "    \n",
     "    # Perform pooling. In this case, cls pooling.\n",
     "    sentence_embeddings = model_output[0][:, 0]\n",
