--- a/llama2-70b/deploy-llama-70b-inferentia2.ipynb
+++ b/llama2-70b/deploy-llama-70b-inferentia2.ipynb
@@ -463,16 +463,15 @@
     "\n",
     "Results with 250 token generation: \n",
     "```bash\n",
-    "Llama 2 70B results on `inf2.48xlarge`:\n",
+    "Llama 2 70B results on inf2.48xlarge:\n",
     "Throughput: 42.23 tokens/s\n",
     "Latency p(50): 88.80 ms/token\n",
     "```\n",
     "\n",
-    "_Note: We ran a similar test on a `ml.g5.48xlarge` instance with 8 NVIDIA A10G GPUs as well, but needed to decrease the context size to 2048 from 4096. With g5 we achieved an thorughput of `~38.5` tokens per second with an output of 50 generated tokens._\n",
+    "_Note: We ran a similar test on a `ml.g5.48xlarge` instance with 8 NVIDIA A10G GPUs as well, but needed to decrease the context size to 2048 from 4096 and generated tokens from 250 to 50. With g5 we achieved an thorughput of `~38.5` tokens per second._\n",
     "\n",
-    "On Inferentia2 we achieved a throughput of `~42.23` tokens per second. Thats a improvement compared to the `ml.g5.48xlarge` instance. But We want to mention that the `g5` benchmark was slightly different so we cannot 100% compare it. If we would compare it and trade it equally cost-performance per token between `g5.48xlarge` (`16.28$/h`) and `inf2.48xlarge` (`12,98$`) would show a ~44.7% improvement for $ per token price. It is great to becoming inferentia2 being an alternative to GPU instances.\n",
-    "\n",
-    "\n"
+    "On Inferentia2 we achieved a throughput of `~42.23` tokens per second. Thats a improvement compared to the `ml.g5.48xlarge` instance. The `g5` benchmark was slightly different so it is not 100% compareable.\n",
+    "Assuming it would be the cost-performance per token between `g5.48xlarge` (`16.28$/h`) and `inf2.48xlarge` (`12,98$`) would show a ~44.7% improvement for $ per token price. This makes inferentia2 a valid alternative to NVIDIA A10G GPUs."
    ]
   },
   {
@@ -494,13 +493,6 @@
     "llm.delete_model()\n",
     "llm.delete_endpoint()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
