--- a/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
+++ b/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
@@ -18,7 +18,7 @@
     "2. [Retrieve the new Hugging Face LLM Inf2 DLC](#2-retrieve-the-new-hugging-face-llm-inf2-dlc)\n",
     "3. [Deploy Llama 3 70B to inferentia2](#3-deploy-llama-3-70b-to-inferentia2)\n",
     "4. [Run inference and chat with the model](#4-run-inference-and-chat-with-the-model)\n",
-    "5. [Benchmark Llama 3 70B on inferentia2](#5-benchmark-llama-3-70b-on-inferentia2)\n",
+    "5. [Benchmark llama 3 70B with llmperf on AWS Inferentia2](#5-benchmark-llama-3-70b-with-llmperf-on-aws-inferentia2)\n",
     "6. [Clean up](#6-clean-up)\n",
     "\n",
     "Lets get started! 🚀\n",
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After we have created the `HuggingFaceModel` we can deploy it to Amazon SageMaker using the `deploy` method. We will deploy the model with the `ml.g5.48xlarge` instance type. TGI will automatically distribute and shard the model across all GPUs."
+    "After we have created the `HuggingFaceModel` we can deploy it to Amazon SageMaker using the `deploy` method. We will deploy the model with the `ml.inf2.48xlarge` instance type. TGI will automatically distribute and shard the model across all Inferentia devices."
    ]
   },
   {
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ## 5. Benchmark llama 3 70B with llmperf on AWS Inferentia2\n",
+    "## 5. Benchmark llama 3 70B with llmperf on AWS Inferentia2\n",
     "\n",
     "We successfully deployed Llama 3 70B to Amazon SageMaker and tested it. Now we want to benchmark the model to see how it performs. We will use a [llmperf](https://github.com/philschmid/llmperf) fork with support for `sagemaker`.\n",
     "\n",
