--- a/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
+++ b/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "# # print ecr image uri\n",
     "# print(f\"llm image uri: {llm_image}\")\n",
-    "llm_image = \"763104351884.dkr.ecr.us-west-2.amazonaws.com/huggingface-neuronx:0.0.22-neuron-pytorch-1.9.0-transformers-4.9.2-tokenizers-0.10.3\""
+    "llm_image = \"558105141721.dkr.ecr.us-east-1.amazonaws.com/optimum-neuron-preview:tgi-llama3\""
    ]
   },
   {
